--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button"class="btn btn-lg btn-dark download-button"><i class="fa-brands fa-apple"></i>Download</button>
+    <button type="button"class="btn btn-lg btn-light download-button"><i class="fa-brands fa-google-play"></i>Download</button>
 
   </section>
 
@@ -217,7 +217,10 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <i class="social-icon fa-brands fa-facebook-f"></i>
+    <i class="social-icon fa-brands fa-twitter"></i>
+    <i class="social-icon fa-brands fa-instagram"></i>
+    <i class="social-icon fa-solid fa-envelope"></i>
     <p>© Copyright TinDog</p>
 
   </footer>
