--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
     <div class="container-fluid">
       <!-- Nav Bar -->
 
@@ -55,7 +55,7 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
 
           <button type="button" class="btn btn-lg btn-dark download-button"><i class="fa-brands fa-apple"></i>
             Download</button>
@@ -76,7 +76,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
 
     <div class="row">
       <div class="feature-box col-lg-4">
@@ -102,17 +102,19 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="medium-heading">I no longer have to sniff other dogs for love. I've found the hottest Corgi on
+            TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+          <h2 class="medium-heading" class="testimonial-text">My dog used to be so lonely, but with TinDog's help,
+            they've found the love of
             their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
@@ -135,7 +137,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -146,9 +148,9 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="medium-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
@@ -159,7 +161,7 @@
             <h3>Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2 class="medium-heading">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -169,18 +171,18 @@
       </div>
 
       <div class="pricing-column col-lg-4 col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h3>Labrador</h3>
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="medium-heading">$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <a href="#" class="btn col-12 btn-block btn-dark">Sign Up</a>
+          </div>
         </div>
-        <div class="card-body">
-          <h2>$49 / mo</h2>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <a href="#" class="btn col-12 btn-block btn-dark">Sign Up</a>
-        </div>
-      </div>
       </div>
 
       <div class="pricing-column col-lg-4">
@@ -189,7 +191,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2>$99 / mo</h2>
+            <h2 class="medium-heading">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -205,18 +207,20 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 
-    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button"class="btn btn-lg btn-dark download-button"><i class="fa-brands fa-apple"></i>Download</button>
-    <button type="button"class="btn btn-lg btn-light download-button"><i class="fa-brands fa-google-play"></i>Download</button>
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-lg btn-dark download-button"><i class="fa-brands fa-apple"></i>
+      Download</button>
+    <button type="button" class="btn btn-lg btn-light download-button"><i class="fa-brands fa-google-play"></i>
+      Download</button>
 
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <i class="social-icon fa-brands fa-facebook-f"></i>
     <i class="social-icon fa-brands fa-twitter"></i>
     <i class="social-icon fa-brands fa-instagram"></i>
